<resources>
    <string name="app_name">StopCar</string>
    <string name="label_next">Next</string>
    <string name="label_lets_go">Lets go</string>
    <string name="hint_car_name">Car Name</string>
    <string name="label_enter_plaque">Enter Plaque with</string>
    <string name="label_enter">Pattern</string>
    <string name="hit_car_country_name">IRAN</string>
    <string name="hint_car_plaque_part_three">3 Number</string>
    <string name="hint_plaque_keyword">Keyword</string>
    <string name="hint_plaque_two_part">2 Number</string>
    <string name="hint_car_model">Car Model</string>
    <string name="label_intro_title_1">Welcome to the Stopcar app</string>
    <string name="label_intro_description_1">have you ever parked your car in a crowded area and found it difficult for you?</string>
    <string name="label_intro_title_2">First step is easy and effortless</string>
    <string name="label_intro_description_2">just enable your GPS,define your location on map and select your car. The end</string>
    <string name="label_intro_description_3">after saving the park location, all reports about your car and park location are visible in the Reports section and you just need to click on the specified history to display the park location on the map.</string>
    <string name="label_intro_title_3">Second step, everything is visible</string>
    <string name="label_select_car_color">Select car color</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_error_input">Error in Input Data</string>
    <string name="label_error_input_description">Please enter the requirements fields </string>
    <string name="label_success_title">Operation Success</string>
    <string name="label_success_description_data_base">Transferring to main page</string>
    <string name="label_error_title">Error in operations</string>
    <string name="label_history">History</string>
    <string name="label_new_park">New Park</string>
    <string name="label_manage_cars">Manage Car</string>
    <string name="label_menu">Options</string>
    <string name="label_save_park">Confirm Park Place</string>
    <string name="label_error_find_user_location">Error find your location please enable the gps</string>
    <string name="label_error_find_address">Address recognition Error</string>
    <string name="label_success_description_car_history">Car Park Location Saved</string>
    <string name="label_error_description_car_save_history">Car Park Location not Saved</string>
    <string name="label_error_description_car_history">Error get park history</string>
    <string name="label_date_park">Park Date</string>
    <string name="label_clock_park">Park Clock</string>
    <string name="label_add_new_car">Add New Car</string>
    <string name="label_error_save_car">Car not saved</string>
    <string name="label_success_save_car">Car Saves</string>
    <string name="label_design">Design</string>
    <string name="label_night_mode">Dark Mode</string>
    <string name="label_night_mode_description">darken all pages</string>
    <string name="label_app_font">Font</string>
    <string name="label_select_app_font">show pages with your favorite font</string>
    <string name="label_public_settings">General</string>
    <string name="label_select_app_language_description">show pages with your language</string>
    <string name="label_select_app_language">Language</string>
    <string name="label_contact_me">Contact me</string>
    <string name="label_app_version">Version 1.1</string>
    <string name="label_other">Other</string>
    <string name="label_credits">Open source licenses</string>
    <string name="label_show_traffic">Show Traffic</string>
    <string name="label_show_traffic_description">show streets traffic on map</string>
    <string name="label_error_write_permission">Error access phone storage</string>
    <string name="label_success_database_backup">Backup Success</string>
    <string name="label_error_backup_database">Error backup data</string>
    <string name="label_back">Cancel</string>
    <string name="label_ok">OK</string>
    <string name="label_clear_all_data">Clear Database</string>
    <string name="label_clear_all_data_description">all data like park history will be cleared</string>
    <string name="label_clear_success">Data Cleaned Success</string>
    <string name="label_clear_error">Database not cleared</string>
    <string name="label_credits_summary">Check GPL3 License and other licence terms used on StopCar</string>
    <string name="label_error_read_credits">Error Read Credits File</string>
    <string name="label_error_restore_description">Error restore database</string>
    <string name="label_error_get_cars">Error get car list</string>
    <string name="label_history_detail">Park Report</string>
    <string name="label_clock">clock</string>
    <string name="label_park_date">Park Date:</string>
    <string name="label_error_location_permission">We need access your location provider please accept </string>
    <string name="label_history_empty">there is no report to display</string>
    <string name="label_direction">Direction</string>
    <string name="label_not_found_direction_app">Direction App Not Found</string>
    <string name="label_address_state">استان</string>
    <string name="label_car_deleted">The car was successfully removed</string>
    <string name="label_car_not_deleted">The car not removed</string>
    <string name="label_undo">undo</string>
    <string name="label_error_clear_data_base">Error in Clear Database Please Tryagain</string>
</resources>
